@@ -1,3 +1,8 @@
+2004-03-23  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* ssock2.adb, ssock2.out, makefile:
+	New regtession test taken from sock2 but over SSL socket.
+
 2004-03-22  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* wsdl_7_main.adb:
